--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-*{
+/* *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-}
+} */
 
 body {
     background-color: tomato;
@@ -17,22 +17,12 @@ body {
     background-color: white;
     padding: 30px 20px 30px 20px;
     margin: 100px 15px 50px 20px;
-    /* float: left; */
-}
-/* .container::after{
-    content: " ";
-    clear: both; */
-
 }
 
 .form-group{
-    margin-right: 100px;
-    font-size: 50px;
+    margin-left: 20px;
+    font-size: 20px;
 }
-/* 
-.footer{
-    background-color: teal;
-} */
 
 .footer {
     left: 0px;
@@ -41,5 +31,6 @@ body {
     height: 50px;
     background-color: blue;
     position: absolute; 
+    border-top: 10px solid black;
     /* clear: both; //clearing previous divs */
 }
