--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
-/* *{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-} */
 
+/* Universal style */
 body {
-    background-color: peachpuff;
+    background-color: darkgray;
+}
 
+.background{
+    background-color: peachpuff;
 }
 
 h1{
@@ -25,47 +24,50 @@ p{
 .navbar-brand{
     background-color: turquoise;
     font-size: 30px;
-   
 }
 
-
-.float-left{
-        display: flex;  
-        flex-wrap: wrap;
-        margin-right: 20px;
-        margin-bottom: 20px;
-}
-.container-main{
+/* .container-main{
    margin: 100px 15px 100px 15px;
-
-}
+} */
 
 .container{
-    background-color: white;
-    /* margin: auto; */
+    /* background-color: white; */
     padding: 30px 0 30px 20px;
-    /* margin: 100px 15px 50px 20px; */
-}
-
-.form-group{
-    margin-left: 20px;
-    margin-right: 20px;
-    font-size: 20px;
-}
-
-.placeholder{
-    margin: 15px 15px 15px 15px;
 }
 
 .footer {
     left: 0px;
     right: 0px;
     bottom: 0px;
-    height: 50px;
-    margin-top: 100px;
+    height: 70px;
     background-color: darkgray;
-    position: fixed; 
+    /* position: fixed;  */
     border-top: 10px solid lightblue;
     text-align: center;
     clear: both; //clearing previous divs
 }
+
+/* index "About Me" page style */
+.float-left{
+    display: flex;  
+    flex-wrap: wrap;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+/* Contact page style */
+.form-group{
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 20px;
+}
+
+/* Porfolio page style */
+.placeholder{
+    margin: 15px 15px 15px 15px;
+    width: 100%;
+}
+.content{
+    background-color: white;
+}
+
